fix: Adding landing response from landing.html
Signed-off-by: Sebastian Franz <sebastian.franz@tum.de>
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/assets/landing.html
+++ b/assets/landing.html
@@ -143,10 +143,10 @@
                     Deployment Guide</a>
             </li>
             <li>
-                <a href="/api/v1/openapi.json" target="_blank">OpenAPI Schema (JSON)</a>
+                <a href="/openapi.json" target="_blank">OpenAPI Schema (JSON)</a>
             </li>
             <li>
-                <a href="/api/v1/docs" target="_blank">Interactive Server API Documentation</a>
+                <a href="/docs" target="_blank">Interactive Server API Documentation</a>
             </li>
             <li>
                 <a href="https://github.com/biocentral/biocentral_api/blob/main/python/examples/exotox_reproduction/exotox_reproduction.ipynb">Example: Reproducing ExoTox via the python API</a>
